# ir-course-final-project

./: README.md  pyproject.toml
app/: core.py  main.py  router.py  schemas.py  utils.py
app/data/: CISI.BLN.JSON
