[tool.poetry]
name = "IR Course Final Project"
version = "0.1.0"
description = ""
authors = ["Mohsen Yazdanian <yazdanian.my@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
nltk = "^3.9.1"
gensim = "^4.3.3"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
